# github-curator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml  weekly-update.yml
examples/: awesome-slam-old.md  awesome-slam-sample.md
src/github_curator/: __init__.py  alternatives.py  audit.py  cli.py  dedupe.py  differ.py  formatter.py  github_api.py  health.py  input.py  models.py  parser.py  trend.py  updater.py
tests/: conftest.py  test_alternatives.py  test_audit.py  test_cli_integration.py  test_dedupe.py  test_differ.py  test_formatter.py  test_github_api.py  test_health.py  test_input.py  test_models.py  test_parser.py  test_trend.py  test_updater.py
